--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </p>
             </div>
             <div class="form">
-                <button>
+                <button id="free">
             Try it free 7 days <span>then $20/mo. thereafter</span>
           </button>
                 <form method="POST" id="form" action=" ">
@@ -46,7 +46,7 @@
                         <span data-error="Password cannot be empty"></span>
                     </div>
                     <div class="input_container">
-                        <input type="submit" name="submit" id="submit" value="CLAIM YOUR FREE TRIAL" />
+                        <button name="submit" id="submit">CLAIM YOUR FREE TRIAL</button>
                     </div>
                     <p>
                         By clicking the button you are agreeing to our
