--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/index.css" />
+    <link rel="icon" href="image/favicon-32x32.png" type="image/x-icon" />
+
 </head>
 
 <body>
