--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </button>
                 <form method="POST" id="form" action=" ">
                     <div class="input_container">
-                        <input type="text" name="fname" id="fname" class="fname" placeholder="First Name" required />
+                        <input type="text" name="fname" value="Jonathan" id="fname" class="fname" placeholder="First Name" required />
                         <span data-error="First Name cannot be empty"></span>
                     </div>
                     <div class="input_container">
